--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This will simulate the market behavior on a turn basis.",
   "main": "./dist/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha \"./**/*.spec.ts\" || exit 0",
     "start": "npm run build && node ./dist/server.js",
     "start:watch": "nodemon",
     "build": "npm run build-ts",
