--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/body-parser": "^1.16.8",
+    "@types/cors": "^2.8.4",
     "@types/dotenv": "^4.0.2",
     "@types/express": "^4.11.0",
     "@types/jsonwebtoken": "^7.2.5",
@@ -31,6 +32,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "inversify": "^4.5.1",
